--- a/basic-oauth2/pom.xml
+++ b/basic-oauth2/pom.xml
@@ -38,5 +38,10 @@
   		<artifactId>spring-security-oauth2-autoconfigure</artifactId>
   		<version>2.1.0.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.webjars</groupId>
+  		<artifactId>js-cookie</artifactId>
+  		<version>2.2.0</version>
+  	</dependency>
   </dependencies>
 </project>
