--- a/basic-oauth2/src/main/resources/application.yml
+++ b/basic-oauth2/src/main/resources/application.yml
@@ -14,3 +14,7 @@ security:
       clientAuthenticationScheme: form
     resource:
       userInfoUri: https://graph.facebook.com/me
+      
+logging:
+  level:
+    org.springframework.security: DEBUG
